Add Basic Gameplay View and Early Game Functions
Added the wireframe for the gameplay view, building the header, aside,
as well as the game board. Also added the first function for gameplay,
allowing the user to place X's on the board, and preventing a square
that has already been played from being counted a second time.

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -1,2 +1,8 @@
 $icon-font-path: '~bootstrap-sass/assets/fonts/bootstrap/';
 @import '~bootstrap-sass/assets/stylesheets/bootstrap';
+@import 'game-board';
+@import 'colors';
+@import 'sizes';
+@import 'login';
+@import 'functions';
+@import 'typography';
