Add UI Upgrades and Login, Logout Functionality
Improved the UI for both the login and gameplay views, to match the
project theme. Added the ability to register login and logout events
with the API. Added an info box that welcomes the user and announces
the winner, or if there is a tie.

--- a/assets/styles/colors.scss
+++ b/assets/styles/colors.scss
@@ -1,3 +1,6 @@
 $black: #000;
 $green-monster: #54796d;
 $green-monster-white: #e4e4e4;
+$red-sox-red: #bd3039;
+$red-sox-blue: #00335d;
+$yellow: #ff0;
