--- a/assets/styles/typography.scss
+++ b/assets/styles/typography.scss
@@ -1,14 +1,14 @@
 @import 'colors';
 
-@font-face {
-  font-family: 'Roboto';
-  src: url('../fonts/Roboto-Black.ttf');
-}
-
-@font-face {
-  font-family: 'Orbitron';
-  src: url('../fonts/Orbitron-Regular.ttf');
-}
+// @font-face {
+//   font-family: 'Roboto';
+//   src: url('../fonts/Roboto-Black.ttf');
+// }
+//
+// @font-face {
+//   font-family: 'Orbitron';
+//   src: url('../fonts/Orbitron-Regular.ttf');
+// }
 
 .move {
   color: $green-monster;
