Add Change Password Functionality
Added the ability to change passwords after logged in. This is done by
pressing a button next to the logout button on the gameplay view, which
launches a modal containing the change password form. The success/fail
messages are then outputted to the display screen.

--- a/assets/styles/game-board.scss
+++ b/assets/styles/game-board.scss
@@ -29,6 +29,12 @@
   width: $square-height;
 }
 
+.buttons {
+  display: inline-block;
+  float: right;
+  margin-top: 15px;
+}
+
 .container {
   height: 100%;
   padding: 0;
@@ -51,6 +57,11 @@
   background-color: $black;
   height: 280px;
   width: 280px;
+}
+
+.game-btn {
+  background-color: $red-sox-red;
+  color: $red-sox-blue;
 }
 
 .game-view {
@@ -87,11 +98,7 @@ html {
 
 .jumbotron-text {
   color: $yellow;
-  font-family: 'Andale Mono';
-}
-
-.logout-btn {
-  float: right;
+  font-family: 'Verdana';
 }
 
 .row {
