--- a/assets/styles/login.scss
+++ b/assets/styles/login.scss
@@ -5,11 +5,17 @@
   text-align: center;
 }
 
+.alert-div {
+  position: absolute;
+  top: 0;
+  width: 100%;
+}
+
 footer {
   border-top: 1px solid $black;
   bottom: 0;
   color: $green-monster-white;
-  font-family: Roboto;
+  font-family: 'Roboto';
   height: 10%;
   position: absolute;
   width: 100%;
@@ -26,11 +32,11 @@ input {
 .login-title {
   border: 10px solid $green-monster-white;
   color: $green-monster-white;
-  font-family: Roboto;
+  font-family: 'Roboto';
   font-size: 100px;
   font-weight: 800;
   letter-spacing: .1em;
-  margin-top: 12%;
+  margin-top: 11%;
   width: 100%;
 }
 
@@ -40,7 +46,9 @@ input {
   font-family: Roboto;
   font-size: 48px;
   font-weight: 500;
+  letter-spacing: .1em;
   margin-top: 50%;
+  padding: 10px;
   width: 100%;
 }
 
