Add Game API Functionality, Live Scoreboard
API integration: When a user logs in, a new game is registered with the
API. Also retrieves a history of completed games for the user and
displays the results of those games on a new scoreboard, included in the
game view sidebar. Each move updates the server with the status of the
game.

UI: Added a game reset button which displays after a game ends, which
resets the status of the board and creates a new game and sends it to
the API.

--- a/assets/styles/game-board.scss
+++ b/assets/styles/game-board.scss
@@ -12,7 +12,7 @@
 .board-background {
   background-color: $green-monster-white;
   height: 3 * $square-height;
-  margin: 10% auto;
+  margin: 11% auto;
   width: 3 * $square-height;
 }
 
@@ -20,6 +20,7 @@
   background-color: $green-monster;
   float: left;
   height: 100%;
+  position: relative;
 }
 
 .board-square {
