Fix Scoreboard Bug, Add UI Improvements
Fixed a bug with ties displaying on the scoreboard as X wins. Also added
visual improvements.

--- a/assets/styles/colors.scss
+++ b/assets/styles/colors.scss
@@ -3,4 +3,5 @@ $green-monster: #54796d;
 $green-monster-white: #e4e4e4;
 $red-sox-red: #bd3039;
 $red-sox-blue: #00335d;
+$td-background: #424743;
 $yellow: #ff0;
