--- a/assets/styles/typography.scss
+++ b/assets/styles/typography.scss
@@ -1,9 +1,6 @@
 @import 'colors';
 
-.move {
-  color: $green-monster;
-  font-family: Roboto;
-  font-size: 6em;
-  margin-top: 10px;
-  text-align: center;
+body {
+  font-family: 'Helvetica Neue';
+  font-weight: 900;
 }
