Add Join Game, Game Watcher Functionality
Added a button that, when clicked, allows a user to choose to join a
game that is currently in progress, as player O. Also attempted to
implemented the game watcher function which should allow the game to be
played on two separate devices.

--- a/assets/styles/game-board.scss
+++ b/assets/styles/game-board.scss
@@ -77,6 +77,13 @@
   color: $red-sox-blue;
 }
 
+.game-id {
+  color: $green-monster-white;
+  font-size: 8px;
+  position: absolute;
+  text-align: left;
+}
+
 .game-view {
   height: 100%;
 }
@@ -111,7 +118,8 @@ html {
 
 .jumbotron-text {
   color: $green-monster-white;
-  font-size: 30px;
+  font-size: 25px;
+  margin-top: 10px;
   text-align: center;
 }
 
