--- a/assets/styles/game-board.scss
+++ b/assets/styles/game-board.scss
@@ -136,6 +136,11 @@ html {
   height: 100%;
 }
 
+img {
+  height: $square-height - 10;
+  width: $square-height - 10;
+}
+
 .jumbotron-text {
   color: $green-monster-white;
   font-size: 25px;
