--- a/assets/styles/game-board.scss
+++ b/assets/styles/game-board.scss
@@ -13,7 +13,7 @@
   background-color: $td-background;
   border: 5px solid $green-monster-white;
   height: 230px;
-  width: 280px;
+  width: 100%;
 }
 
 .board-background {
@@ -122,7 +122,7 @@
   background-color: $td-background;
   border: 5px solid $green-monster-white;
   height: 100px;
-  width: 280px;
+  width: 100%;
 }
 
 .game-btn {
@@ -199,7 +199,7 @@ img {
   margin: 0 auto;
   position: relative;
   text-align: center;
-  top: -30px;
+  top: -55px;
 }
 
 .row {
